--- a/src/partials/components/componentHome.hbs
+++ b/src/partials/components/componentHome.hbs
@@ -57,7 +57,22 @@
                   <span class='preview-post-title-username'>@mychanel</span>
                 </div>
               </div>
-              <img class='preview-post-header-graph' src='/images/create/graph.svg' alt='graph' />
+
+              <div class='preview-post-header-graph'>
+                <svg
+                  width='80'
+                  height='55'
+                  viewBox='0 0 80 55'
+                  fill='none'
+                  xmlns='http://www.w3.org/2000/svg'
+                >
+                  <path
+                    d='M40.2085 24.0625C34.4772 15.8125 25.8802 0 11.5518 0H0.805542V55H80.8055C64.7805 55 50.8256 39.3452 40.2085 24.0625Z'
+                    fill='var(--background-tertiary)'
+                  />
+                </svg>
+
+              </div>
             </div>
             <div class='post-actions'>
               <button class='post-action-button'>
@@ -111,8 +126,36 @@
             <div class='post-info-row'>
               <span class='post-info-label'>Настройки</span>
               <div class='post-info-actions'>
-                <img src='/icons/pin.svg' alt='pin' />
-                <img src='/icons/notification.svg' alt='notification' />
+                <svg
+                  width='24'
+                  height='24'
+                  viewBox='0 0 24 24'
+                  fill='none'
+                  xmlns='http://www.w3.org/2000/svg'
+                >
+                  <path
+                    fill-rule='evenodd'
+                    clip-rule='evenodd'
+                    d='M14.5686 6.25461L14.5683 6.25L14.5686 6.24539C14.5712 6.21458 14.5817 6.08821 14.1831 5.89438C13.7194 5.66892 12.9348 5.5 11.9046 5.5C10.8744 5.5 10.0898 5.66892 9.62615 5.89438C9.22751 6.08821 9.23806 6.21458 9.24063 6.24539L9.24091 6.25L9.24063 6.25461C9.23806 6.28542 9.22751 6.41179 9.62615 6.60562C10.0898 6.83108 10.8744 7 11.9046 7C12.9348 7 13.7194 6.83108 14.1831 6.60562C14.5817 6.41179 14.5712 6.28542 14.5686 6.25461ZM11.9046 8.5C12.444 8.5 12.9601 8.46061 13.4351 8.38183L14.33 10.7338L14.5991 11.4407L15.3632 11.6624C16.0537 11.8627 16.4874 12.1021 16.7242 12.3114C16.9278 12.4914 16.9656 12.6223 16.9656 12.7499C16.9656 12.8902 16.9069 13.2381 15.9672 13.628C15.0417 14.012 13.6227 14.2499 11.9046 14.2499C10.1864 14.2499 8.76745 14.012 7.84201 13.628C6.9023 13.2381 6.84358 12.8902 6.84358 12.7499C6.84358 12.6223 6.88133 12.4914 7.08495 12.3114C7.32177 12.1021 7.75547 11.8627 8.44599 11.6624L9.21015 11.4407L9.47917 10.7338L10.3741 8.38183C10.8492 8.46061 11.3652 8.5 11.9046 8.5ZM16.1665 6.25C16.1665 6.98768 15.705 7.54398 14.956 7.91888L15.8352 10.2293C17.4895 10.7092 18.5638 11.5494 18.5638 12.7499C18.5638 14.6029 16.0047 15.5975 12.7037 15.7337V19C12.7037 19.4142 12.3459 19.75 11.9046 19.75C11.4633 19.75 11.1055 19.4142 11.1055 19V15.7337C7.80446 15.5975 5.24536 14.6029 5.24536 12.7499C5.24536 11.5494 6.31969 10.7092 7.97406 10.2293L8.85323 7.91887C8.10419 7.54398 7.6427 6.98768 7.6427 6.25C7.6427 4.75 9.55082 4 11.9046 4C14.2584 4 16.1665 4.75 16.1665 6.25Z'
+                    fill='var(--text-primary)'
+                  />
+                </svg>
+
+                <svg
+                  width='24'
+                  height='24'
+                  viewBox='0 0 24 24'
+                  fill='none'
+                  xmlns='http://www.w3.org/2000/svg'
+                >
+                  <path
+                    fill-rule='evenodd'
+                    clip-rule='evenodd'
+                    d='M7.38655 8.80055L5.50042 7.03033C5.18835 6.73744 5.18835 6.26256 5.50042 5.96967C5.81249 5.67678 6.31846 5.67678 6.63053 5.96967L18.3508 16.9697C18.6628 17.2626 18.6628 17.7374 18.3508 18.0303C18.0387 18.3232 17.5327 18.3232 17.2207 18.0303L16.2015 17.0738C15.4769 17.2281 14.7452 17.3427 14.01 17.4176C13.8054 18.3218 12.9499 19.0001 11.9256 19.0001C10.9013 19.0001 10.0458 18.3218 9.84116 17.4176C9.08301 17.3404 8.32854 17.2209 7.58176 17.0592L6.70678 16.8697C5.70771 16.6533 5 15.8183 5 14.856C5 14.3079 5.23199 13.7823 5.64492 13.3947L5.8514 13.2009C6.33836 12.7439 6.67028 12.1618 6.80534 11.528L7.38655 8.80055ZM14.841 15.7969C12.5528 16.1551 10.2083 16.0886 7.94113 15.5976L7.06615 15.4081C6.79224 15.3488 6.59821 15.1198 6.59821 14.856C6.59821 14.7057 6.66182 14.5616 6.77503 14.4554L6.98151 14.2616C7.69158 13.5951 8.17558 12.7464 8.37252 11.8222L8.74477 10.0753L14.841 15.7969ZM15.4787 11.8222C15.5083 11.9614 15.5445 12.0989 15.587 12.2343L18.8092 15.2585C18.8368 15.1279 18.8512 14.9932 18.8512 14.856C18.8512 14.3079 18.6192 13.7823 18.2063 13.3947L17.9998 13.2009C17.5128 12.7439 17.1809 12.1618 17.0458 11.528L16.3861 8.43203C15.9609 6.43645 14.0939 5 11.9256 5C10.8084 5 9.77122 5.38132 8.97002 6.02397L10.1055 7.08965C10.6106 6.71802 11.2452 6.5 11.9256 6.5C13.3321 6.5 14.5431 7.43176 14.8189 8.72621L15.4787 11.8222Z'
+                    fill='var(--text-primary)'
+                  />
+                </svg>
+
               </div>
             </div>
             <div class='post-info-row'>
@@ -142,11 +185,46 @@
                   <span class='preview-post-title-username'>@mychanel</span>
                 </div>
               </div>
-              <img class='preview-post-header-graph' src='/images/create/graph.svg' alt='graph' />
+              <div class='preview-post-header-graph'>
+                <svg
+                  width='81'
+                  height='55'
+                  viewBox='0 0 81 55'
+                  fill='none'
+                  xmlns='http://www.w3.org/2000/svg'
+                >
+                  <path
+                    d='M40.2085 24.0625C34.4772 15.8125 25.8802 0 11.5518 0H0.805542V55H80.8055C64.7805 55 50.8256 39.3452 40.2085 24.0625Z'
+                    fill='var(--background-tertiary)'
+                  />
+                </svg>
+
+              </div>
             </div>
             <div class='post-actions'>
               <button class='post-action-button'>
-                <img src='/icons/edit.svg' alt='edit' />
+                <svg
+                  width='48'
+                  height='49'
+                  viewBox='0 0 48 49'
+                  fill='none'
+                  xmlns='http://www.w3.org/2000/svg'
+                >
+                  <rect
+                    x='0.5'
+                    y='0.90625'
+                    width='47'
+                    height='47'
+                    rx='7.5'
+                    stroke='var(--text-primary)'
+                  />
+                  <path
+                    fill-rule='evenodd'
+                    clip-rule='evenodd'
+                    d='M29.1348 13.9062C32.0978 13.9062 34.4998 16.3083 34.4998 19.2713C34.4998 19.6779 34.3383 20.0677 34.0509 20.3552L33.2581 21.148L30.3013 24.1048C30.3012 24.1049 30.301 24.1051 30.3009 24.1052L22.7133 31.6928C22.0851 32.321 21.285 32.7492 20.4138 32.9235L16.4561 33.715C15.4066 33.9249 14.4812 32.9995 14.6911 31.9499L15.4826 27.9923C15.6569 27.1211 16.0851 26.321 16.7133 25.6928L24.3009 18.1052C24.3012 18.1049 24.3015 18.1046 24.3018 18.1043L28.0509 14.3552C28.3383 14.0677 28.7282 13.9062 29.1348 13.9062ZM25.669 19.919L18.3043 27.2838C17.9902 27.5979 17.7761 27.998 17.6889 28.4335L17.118 31.2881L19.9725 30.7172C20.3537 30.6409 20.7076 30.4675 21.0006 30.2149C21.0424 30.1788 21.083 30.1411 21.1223 30.1018L28.487 22.7371C28.3519 21.2435 27.1626 20.0542 25.669 19.919ZM30.3171 20.907C29.775 19.644 28.7621 18.631 27.4991 18.089L29.419 16.169C30.9126 16.3041 32.1019 17.4935 32.237 18.9871L30.3171 20.907Z'
+                    fill='var(--text-primary)'
+                  />
+                </svg>
               </button>
               <button class='post-action-button'>
                 <img src='/icons/garbage.svg' alt='delete' />
@@ -173,8 +251,35 @@
             <div class='post-info-row'>
               <span class='post-info-label'>Настройки</span>
               <div class='post-info-actions'>
-                <img src='/icons/pin.svg' alt='pin' />
-                <img src='/icons/notification.svg' alt='notification' />
+                <svg
+                  width='24'
+                  height='24'
+                  viewBox='0 0 24 24'
+                  fill='none'
+                  xmlns='http://www.w3.org/2000/svg'
+                >
+                  <path
+                    fill-rule='evenodd'
+                    clip-rule='evenodd'
+                    d='M14.5686 6.25461L14.5683 6.25L14.5686 6.24539C14.5712 6.21458 14.5817 6.08821 14.1831 5.89438C13.7194 5.66892 12.9348 5.5 11.9046 5.5C10.8744 5.5 10.0898 5.66892 9.62615 5.89438C9.22751 6.08821 9.23806 6.21458 9.24063 6.24539L9.24091 6.25L9.24063 6.25461C9.23806 6.28542 9.22751 6.41179 9.62615 6.60562C10.0898 6.83108 10.8744 7 11.9046 7C12.9348 7 13.7194 6.83108 14.1831 6.60562C14.5817 6.41179 14.5712 6.28542 14.5686 6.25461ZM11.9046 8.5C12.444 8.5 12.9601 8.46061 13.4351 8.38183L14.33 10.7338L14.5991 11.4407L15.3632 11.6624C16.0537 11.8627 16.4874 12.1021 16.7242 12.3114C16.9278 12.4914 16.9656 12.6223 16.9656 12.7499C16.9656 12.8902 16.9069 13.2381 15.9672 13.628C15.0417 14.012 13.6227 14.2499 11.9046 14.2499C10.1864 14.2499 8.76745 14.012 7.84201 13.628C6.9023 13.2381 6.84358 12.8902 6.84358 12.7499C6.84358 12.6223 6.88133 12.4914 7.08495 12.3114C7.32177 12.1021 7.75547 11.8627 8.44599 11.6624L9.21015 11.4407L9.47917 10.7338L10.3741 8.38183C10.8492 8.46061 11.3652 8.5 11.9046 8.5ZM16.1665 6.25C16.1665 6.98768 15.705 7.54398 14.956 7.91888L15.8352 10.2293C17.4895 10.7092 18.5638 11.5494 18.5638 12.7499C18.5638 14.6029 16.0047 15.5975 12.7037 15.7337V19C12.7037 19.4142 12.3459 19.75 11.9046 19.75C11.4633 19.75 11.1055 19.4142 11.1055 19V15.7337C7.80446 15.5975 5.24536 14.6029 5.24536 12.7499C5.24536 11.5494 6.31969 10.7092 7.97406 10.2293L8.85323 7.91887C8.10419 7.54398 7.6427 6.98768 7.6427 6.25C7.6427 4.75 9.55082 4 11.9046 4C14.2584 4 16.1665 4.75 16.1665 6.25Z'
+                    fill='var(--text-primary)'
+                  />
+                </svg>
+
+                <svg
+                  width='24'
+                  height='24'
+                  viewBox='0 0 24 24'
+                  fill='none'
+                  xmlns='http://www.w3.org/2000/svg'
+                >
+                  <path
+                    fill-rule='evenodd'
+                    clip-rule='evenodd'
+                    d='M7.38655 8.80055L5.50042 7.03033C5.18835 6.73744 5.18835 6.26256 5.50042 5.96967C5.81249 5.67678 6.31846 5.67678 6.63053 5.96967L18.3508 16.9697C18.6628 17.2626 18.6628 17.7374 18.3508 18.0303C18.0387 18.3232 17.5327 18.3232 17.2207 18.0303L16.2015 17.0738C15.4769 17.2281 14.7452 17.3427 14.01 17.4176C13.8054 18.3218 12.9499 19.0001 11.9256 19.0001C10.9013 19.0001 10.0458 18.3218 9.84116 17.4176C9.08301 17.3404 8.32854 17.2209 7.58176 17.0592L6.70678 16.8697C5.70771 16.6533 5 15.8183 5 14.856C5 14.3079 5.23199 13.7823 5.64492 13.3947L5.8514 13.2009C6.33836 12.7439 6.67028 12.1618 6.80534 11.528L7.38655 8.80055ZM14.841 15.7969C12.5528 16.1551 10.2083 16.0886 7.94113 15.5976L7.06615 15.4081C6.79224 15.3488 6.59821 15.1198 6.59821 14.856C6.59821 14.7057 6.66182 14.5616 6.77503 14.4554L6.98151 14.2616C7.69158 13.5951 8.17558 12.7464 8.37252 11.8222L8.74477 10.0753L14.841 15.7969ZM15.4787 11.8222C15.5083 11.9614 15.5445 12.0989 15.587 12.2343L18.8092 15.2585C18.8368 15.1279 18.8512 14.9932 18.8512 14.856C18.8512 14.3079 18.6192 13.7823 18.2063 13.3947L17.9998 13.2009C17.5128 12.7439 17.1809 12.1618 17.0458 11.528L16.3861 8.43203C15.9609 6.43645 14.0939 5 11.9256 5C10.8084 5 9.77122 5.38132 8.97002 6.02397L10.1055 7.08965C10.6106 6.71802 11.2452 6.5 11.9256 6.5C13.3321 6.5 14.5431 7.43176 14.8189 8.72621L15.4787 11.8222Z'
+                    fill='var(--text-primary)'
+                  />
+                </svg>
               </div>
             </div>
             <div class='post-info-row'>
@@ -185,7 +290,12 @@
               <span class='post-info-label-time'>Время публикации</span>
               <div class='time-input-wrapper'>
                 <div class='time-input-container'>
-                  <input type='datetime-local' class='time-input' value='now' />
+                  <input
+                    type='datetime-local'
+                    class='time-input'
+                    value='now'
+                    style='color-scheme: light dark'
+                  />
                   <img src='/icons/clock.svg' alt='calendar' class='time-input-icon' />
                 </div>
                 <button class='time-reset-button'>
@@ -222,7 +332,19 @@
     <div class='modal__header'>
       <div class='modal__header-wrapper'>
         <h2 class='modal__title'>Настройки</h2>
-        <img src='/images/create/graph.svg' alt='graph' />
+        <svg
+          width='80'
+          height='48'
+          viewBox='0 0 80 48'
+          fill='none'
+          xmlns='http://www.w3.org/2000/svg'
+        >
+          <path
+            d='M39.403 21C33.6716 13.8 25.0746 0 10.7463 0H0V48H80C63.975 48 50.02 34.3377 39.403 21Z'
+            fill='var(--background-tertiary)'
+          />
+        </svg>
+
       </div>
       <button class='modal__close' data-onboarding-close>
         <img src='/icons/closemodal.svg' alt='Закрыть' />
@@ -245,8 +367,19 @@
   <div class='onboarding-modal' data-onboarding-step='2' style='display: none;'>
     <div class='modal__header'>
       <div class='modal__header-wrapper'>
-        <h2 class='modal__title'>Создание поста</h2>
-        <img src='/images/create/graph.svg' alt='graph' />
+        <h2 class='modal__title-onboarding'>Создание поста</h2>
+        <svg
+          width='80'
+          height='48'
+          viewBox='0 0 80 48'
+          fill='none'
+          xmlns='http://www.w3.org/2000/svg'
+        >
+          <path
+            d='M39.403 21C33.6716 13.8 25.0746 0 10.7463 0H0V48H80C63.975 48 50.02 34.3377 39.403 21Z'
+            fill='var(--background-tertiary)'
+          />
+        </svg>
       </div>
       <button class='modal__close' data-onboarding-close>
         <img src='/icons/closemodal.svg' alt='Закрыть' />
@@ -271,7 +404,18 @@
     <div class='modal__header'>
       <div class='modal__header-wrapper'>
         <h2 class='modal__title'>Каналы</h2>
-        <img src='/images/create/graph.svg' alt='graph' />
+        <svg
+          width='80'
+          height='48'
+          viewBox='0 0 80 48'
+          fill='none'
+          xmlns='http://www.w3.org/2000/svg'
+        >
+          <path
+            d='M39.403 21C33.6716 13.8 25.0746 0 10.7463 0H0V48H80C63.975 48 50.02 34.3377 39.403 21Z'
+            fill='var(--background-tertiary)'
+          />
+        </svg>
       </div>
       <button class='modal__close' data-onboarding-close>
         <img src='/icons/closemodal.svg' alt='Закрыть' />
