--- a/src/css/components/componentPreview.css
+++ b/src/css/components/componentPreview.css
@@ -47,6 +47,7 @@
   line-height: 18px;
   letter-spacing: 0px;
   color: var(--text-head);
+  white-space: nowrap;
 }
 
 .preview-post-title-username {
@@ -123,7 +124,7 @@
   padding-block: 8px;
   width: 100%;
   white-space: nowrap;
-  color: var(--background-tertiary);
+  color: white;
 }
 
 .preview-post-buttons {
@@ -211,7 +212,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: var(--Base-Generic-Hover, rgba(0, 0, 0, 0.15));
+  background: var(--slider);
   transition: 0.3s;
   border-radius: 34px;
 }
@@ -222,8 +223,8 @@
   height: 21px;
   width: 21px;
   left: 3px;
-  bottom: 3px;
-  background-color: var(--background-tertiary);
+  bottom: 2px;
+  background-color: var(--background-tertiarys);
   transition: 0.3s;
   border-radius: 50%;
 }
@@ -257,7 +258,8 @@ input:checked + .slider:before {
   font-size: 14px;
   box-sizing: border-box;
   cursor: pointer;
-  background-color: transparent;
+  background-color: var(--background-tertiary);
+  color: var(--text-primary);
   position: relative;
   z-index: 1;
 }
@@ -279,7 +281,7 @@ input:checked + .slider:before {
 
 /* Стилизация для состояния "Сейчас" */
 .time-input[data-is-now='true'] {
-  color: rgba(0, 0, 0, 0.5);
+  color: var(--text-primary);
 }
 
 /* Стилизация для выбранной даты */
@@ -294,6 +296,7 @@ input:checked + .slider:before {
   transform: translateY(-50%);
   width: 16px;
   height: 16px;
+  z-index: 1111;
   pointer-events: none;
 }
 
