--- a/src/partials/components/componentHome.hbs
+++ b/src/partials/components/componentHome.hbs
@@ -83,14 +83,7 @@
                   fill='none'
                   xmlns='http://www.w3.org/2000/svg'
                 >
-                  <rect
-                    x='0.5'
-                    y='0.90625'
-                    width='47'
-                    height='47'
-                    rx='7.5'
-                    stroke='var(--text-primary)'
-                  />
+                  <rect x='0.5' y='0.90625' width='47' height='47' rx='7.5' stroke='white' />
                   <path
                     fill-rule='evenodd'
                     clip-rule='evenodd'
@@ -210,14 +203,7 @@
                   fill='none'
                   xmlns='http://www.w3.org/2000/svg'
                 >
-                  <rect
-                    x='0.5'
-                    y='0.90625'
-                    width='47'
-                    height='47'
-                    rx='7.5'
-                    stroke='var(--text-primary)'
-                  />
+                  <rect x='0.5' y='0.90625' width='47' height='47' rx='7.5' stroke='white' />
                   <path
                     fill-rule='evenodd'
                     clip-rule='evenodd'
