--- a/src/css/components/componentCreate.css
+++ b/src/css/components/componentCreate.css
@@ -796,16 +796,22 @@
   letter-spacing: 0.1px;
   color: var(--background-secondary);
   padding-bottom: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
 
 .bottom-menu__item {
   width: 100%;
-  padding: 12px;
+  padding: 8px;
+  padding-inline-start: 24px;
   border: none;
   background: none;
   text-align: left;
   font-size: 16px;
   color: var(--background-secondary);
+  border-radius: 100px;
+  border: 1px solid var(--border-menu);
 }
 
 .bottom-menu__item {
@@ -1081,6 +1087,7 @@
   letter-spacing: 0.1px;
   padding: 8px;
   background: rgba(245, 245, 245, 1);
+  color: var(--background-primary);
   border-radius: 8px;
   width: 100%; /* Занимает всю ширину ячейки грида */
   box-sizing: border-box; /* Учитываем padding в общей ширине */
